--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
         "symfony/ux-turbo": "^2.13",
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "7.0.*",
+        "twbs/bootstrap": "5.3.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
